# mosaic

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  IMPLEMENTATION.md  LICENSE  Makefile  PUSH.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  publish.yml
configs/eval/: release_gates.yaml
configs/eval/scenarios/: gsm8k.yaml  humaneval.yaml  toxicity.yaml  truthfulqa.yaml
configs/serve/: local.yaml
configs/training/: pretrain.yaml
dashboard/: index.html
docs/: API.md  ARCHITECTURE.md  CONFIG.md  DEPLOYMENT.md  DEVELOP.md  MULTIMODAL.md  QUICKSTART.md  SECURITY.md  TOOLS.md  TRAINING.md
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  secret.yaml  service.yaml
k8s/overlays/prod/: kustomization.yaml
scripts/: pre_push.py  push.sh  release.py
src/mosaic/: __init__.py  __main__.py  api.py  cli.py  py.typed  version.py
src/mosaic/adapters/: __init__.py  anthropic_adapter.py  base.py  local_adapter.py  ollama_adapter.py  openai_adapter.py
src/mosaic/alignment/: __init__.py  constitutional.py  covenant.py  objectives.py  result.py  safety_gates.py
src/mosaic/audit/: __init__.py  ark_ledger.py
src/mosaic/core/: __init__.py  config.py  schema.py
src/mosaic/eval/: __init__.py  benchmark.py  metrics.py  runner.py
src/mosaic/guardrails/: __init__.py  constitutional.py  context.py  engine.py  factual.py  hallucination.py  injection.py  jailbreak.py  output.py  pii.py  rag.py  rate_limit.py  toxicity.py  tuner.py
src/mosaic/inference/: __init__.py  compute_policy.py  modes.py  red_sea_router.py  router.py  staff_decoder.py
src/mosaic/memory/: __init__.py  exodus.py  sinai.py  vectorstore.py
src/mosaic/model/: __init__.py  config.py  transformer.py  verifier.py
src/mosaic/multimodal/: __init__.py  adapter_mixin.py  vision.py
src/mosaic/orchestration/: __init__.py  agent_session.py  tool_harness.py
src/mosaic/security/: __init__.py  input_guard.py  privacy.py  rate_limit.py
src/mosaic/serve/: __init__.py
src/mosaic/tools/: attack_mapper.py  registry.py  runner.py
src/mosaic/train/: __init__.py
src/mosaic/utils/: __init__.py  circuit.py  logging_.py  structured.py
tests/: smoke.py
tests/integration/: test_api.py  test_staff_decoder.py
tests/unit/: test_exodus.py  test_guardrails.py  test_privacy.py  test_router.py  test_tools.py  test_transformer.py  test_tuner.py
