[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mosaic-ai"
version = "0.3.0"
description = "Multi-Origin Synthesis of Intelligent Capabilities — unified LLM framework combining memory-first reasoning, defense-in-depth security, and multi-provider orchestration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Mosaic AI Contributors" }]
keywords = [
    "ai",
    "llm",
    "memory",
    "security",
    "guardrails",
    "evaluation",
    "agents",
    "orchestration",
    "alignment",
    "safety",
    "training",
    "inference",
    "fastapi",
    "pytorch",
    "transformer",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies (minimal set)
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "structlog>=24.0.0",
    "cachetools>=5.3.0",
    "redis[hiredis]>=5.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
]

# Security stack (defense-in-depth)
security = [
    "llm-guard>=0.5.0",
    "nemoguardrails>=0.10.0",
    "guardrails-ai>=0.5.0",
    "slowapi>=0.1.9",
    "authlib>=1.3.0",
    "casbin>=1.60.0",
    "opacus>=1.5.0",
    "cryptography>=42.0.0",
    "pydantic[email]",
]

# LLM provider adapters
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
ollama = ["ollama>=0.1.0"]
local = ["gguf>=0.1.0", "sentencepiece", "protobuf"]

# Evaluation & benchmarking
eval = [
    "garak>=0.9.0",
    "pyrit>=0.6.0",
    "giskard>=2.0.0",
    "lm-eval>=0.4.0",
    "eleuther-assertion-gen>=0.1.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
]

# Development and testing
dev = [
    "black>=24.0.0",
    "ruff>=0.15.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.92.0",
    "faker>=22.0.0",
    "pre-commit>=3.6.0",
    "ipython>=8.20.0",
    "debugpy>=1.8.0",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

# Dashboard & CLI frontend
dashboard = [
    # These are Node.js packages; tracked in package.json, listed here for reference
]

# All-in-one
all = [
    "mosaic-ai[security,openai,anthropic,ollama,local,eval,dev,docs]",
]

[project.optional-dependencies]
security = [
    "llm-guard>=0.5.0",
    "nemoguardrails>=0.10.0",
    "guardrails-ai>=0.5.0",
    "slowapi>=0.1.9",
    "authlib>=1.3.0",
    "casbin>=1.60.0",
    "opacus>=1.5.0",
    "cryptography>=42.0.0",
    "pydantic[email]",
]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
ollama = ["ollama>=0.1.0"]
local = ["gguf>=0.1.0", "sentencepiece", "protobuf"]
eval = [
    "garak>=0.9.0",
    "pyrit>=0.6.0",
    "giskard>=2.0.0",
    "lm-eval>=0.4.0",
    "eleuther-assertion-gen>=0.1.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
]
dev = [
    "black>=24.0.0",
    "ruff>=0.15.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.92.0",
    "faker>=22.0.0",
    "pre-commit>=3.6.0",
    "ipython>=8.20.0",
    "debugpy>=1.8.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
mosaic = "mosaic.cli:main"

[project.urls]
Homepage = "https://github.com/s3na13/mosaic"
Documentation = "https://mosaic-ai.readthedocs.io"
Repository = "https://github.com/s3na13/mosaic.git"
Issues = "https://github.com/s3na13/mosaic/issues"
Changelog = "https://github.com/s3na13/mosaic/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/mosaic"]

# Ruff linting configuration
[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["dashboard/node_modules", "cli/node_modules", "tests/fixtures"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
]
ignore = ["E501"]  # Let ruff format handle long lines

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "DTZ"]  # assert, magic numbers, datetime
"src/mosaic/dashboard/*" = ["INP", "S"]  # input validation, security
"src/mosaic/cli/*" = ["INP", "S"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
pretty = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
exclude = ["dashboard/", "cli/", "tests/fixtures/"]

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openai.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    --strict-config
    --strict-markers
    --tb=short
    --disable-warnings
    -p no:cacheprovider
"""
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "security: marks security-related tests",
    "integration: marks integration tests that hit external services",
    "gpu: marks tests requiring GPU",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["mosaic"]
omit = [
    "tests/*",
    "src/mosaic/__main__.py",
    "src/mosaic/cli.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "raise ImportError",
]
